flask-app/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-fruits-app
  namespace: demo-user2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-fruits-app
  template:
    metadata:
      labels:
        app: flask-fruits-app
    spec:
      containers:
        - name: flask-fruits-app
          image: image-registry.openshift-image-registry.svc:5000/demo/flask-fruits-app:latest
          ports:
            - containerPort: 5000
