flask-app/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-fruits-service
  namespace: demo-user2
spec:
  selector:
    app: flask-fruits-app
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
