flask-app/k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: flask-fruits-route
  namespace: demo-user2
spec:
  to:
    kind: Service
    name: flask-fruits-service
  port:
    targetPort: 5000
